--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   })(window,document,'script','dataLayer','GTM-MN94CQHN');</script>
   <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/Logistics/src/assets/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
     <title>Legacy Logistics - Надежные логистические услуги по всему миру</title>
