photo titles are ready

--- a/index.html
+++ b/index.html
@@ -2,24 +2,39 @@
 <html lang="en">
   <head>
     <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-MN94CQHN');</script>
-  <!-- End Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-MN94CQHN");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Logistics/src/assets/logo.jpg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/Logistics/src/assets/logo.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <title>Legacy Logistics - Надежные логистические услуги по всему миру</title>
+    <title>
+      Legacy Logistics - Надежные логистические услуги по всему миру
+    </title>
 
     <meta
       name="description"
       content="Компания Legacy Logistics предлагает комплексные логистические решения: транспортировка грузов, складирование и таможенное оформление. Мы обеспечиваем надежность и оперативность на каждом этапе доставки по всему миру."
     />
-    <meta name="keywords" content="логистика, грузоперевозки, транспортировка грузов, международные перевозки, складирование, таможенное оформление, логистическая компания, Legacy Logistics, транспортные услуги, доставка грузов, логистические решения, экспедирование, оптимизация цепочки поставок, транспортная логистика, управление складом, логистика 3PL, международная доставка, фрахтование, таможенные услуги, перевозка контейнеров, логистика под ключ, логистическая поддержка, услуги логистики, грузовой транспорт, управление грузопотоком" />
-
+    <meta
+      name="keywords"
+      content="логистика, грузоперевозки, транспортировка грузов, международные перевозки, складирование, таможенное оформление, Legacy Logistics, транспортные услуги, доставка грузов, логистические решения, экспедирование, оптимизация цепочки поставок, транспортная логистика, управление складом, логистика 3PL, международная доставка, фрахтование, таможенные услуги, перевозка контейнеров, доставка на маркетплейсы, карго доставка из Китая, покупка товаров с 1688, Alibaba, Taobao, Tmall, торговый представитель Китай, производство в Китае, финансовые переводы в Китай"
+    />
 
     <meta
       property="og:title"
@@ -39,28 +54,59 @@
     />
   </head>
   <body>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+      (function (m, e, t, r, i, k, a) {
+        m[i] =
+          m[i] ||
+          function () {
+            (m[i].a = m[i].a || []).push(arguments);
+          };
+        m[i].l = 1 * new Date();
+        for (var j = 0; j < document.scripts.length; j++) {
+          if (document.scripts[j].src === r) {
+            return;
+          }
+        }
+        (k = e.createElement(t)),
+          (a = e.getElementsByTagName(t)[0]),
+          (k.async = 1),
+          (k.src = r),
+          a.parentNode.insertBefore(k, a);
+      })(
+        window,
+        document,
+        "script",
+        "https://mc.yandex.ru/metrika/tag.js",
+        "ym"
+      );
 
-  <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-  m[i].l=1*new Date();
-  for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-  k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-  ym(98741012, "init", {
-       clickmap:true,
-       trackLinks:true,
-       accurateTrackBounce:true,
-       webvisor:true
-  });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/98741012" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+      ym(98741012, "init", {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true,
+        webvisor: true,
+      });
+    </script>
+    <noscript
+      ><div>
+        <img
+          src="https://mc.yandex.ru/watch/98741012"
+          style="position: absolute; left: -9999px"
+          alt=""
+        /></div
+    ></noscript>
+    <!-- /Yandex.Metrika counter -->
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MN94CQHN"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-MN94CQHN"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
